2002-07-27  John Levon  <levon@movementarian.org>

	* dae/opd_stats.h:
	* dae/opd_stats.c: 
	* dae/opd_proc.c: log unique samples vs. sample entries
 
2002-07-27  Will Cohen  <wcohen@nc.rr.com>
 
	* dae/oprofiled.c:
	* gui/oprof_start.cpp:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: op_get_nr_counter() new, localize
	  op_nr_counter computations.

2002-07-26  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* utils/op_start: fix #587093, some option of op_start
	  was incorrectly checked

2002-07-26  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_time_options.cpp:
	* pp/oprofpp_options.cpp: output format header or details are illegal
	  if not combined with other output format flag

	* pp/opp_symbol.cpp:
	* pp/opp_symbol.h:
	* pp/oprofpp.cpp:
	* pp/outsymbflag.h: minor cleanup

2002-07-25  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.4cvs
 
2002-07-24  Kevin Puetz  <puetzk@iastate.edu>

	* gui/ui/oprof_start.base.ui: fix resize
 
2002-07-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_fileio.c:
	* libutil/op_fileio.h: opd_get_link() new, read a symlink filename
	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h: opd_read_link() use the above function

	* dae/opd_image.c:
	* dae/opd_parse_proc.c: fix #584723 we can not assume than the first
	  map in /proc/pid/maps is the the map for the binary image

2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.3
 
2002-07-17  William Cohen  <wcohen@nc.rr.com>
 
	* gui/oprof_start_util.cpp: get HZ from sysconf

2002-07-17  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.base.ui: revert patch 2002-07-13, reapply
	  the same modification with QT2 designer rather QT3 designer

2002-07-14  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: set KVERS properly
 
	* dae/oprofiled.c: remove eip == 0 checking
 
	* module/oprofile.c: do check in evict_op_entry() instead,
	  as suggested by Philippe
 
2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>
